--- a/styles.css
+++ b/styles.css
@@ -2,79 +2,93 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    --box-shadow-value:10px 10px 5px purple;
-    --box-shadow-value2: 5px 5px 5px lightblue;
+    --box-shadow-value:5px 5px 1px rgba(128, 0, 128, 0.542);
+    --box-shadow-value2:5px 5px 5px lightblue;--bg-color:rgb(0, 0, 0)
 }
 body{
-background-color:lavenderblush;
-background-image: linear-gradient(90deg,purple, lavenderblush, purple);
-font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-span{
-  color:purple;
-}
-h1{
-    text-align: center;
-}
-h1{
-    font-family: 'Milk Peach', sans-serif;
-    font-family: 'Dalton Marine', sans-serif;
-
-    letter-spacing:3px;
-    font-style:normal;
-    font-size:32px;
-}
-#sign-in{
-    box-shadow: var(--box-shadow-value)
-    background-color: whitesmoke;
-    border-radius: 5px;
-    padding: 4px;
-}
-.container{
-    display:flex;
-    height:300px;
-    width:50%;
-    border:1px solid black;
-    margin:auto;
-    margin-top:50px;
-    border-radius:5px;
-    box-shadow:var(--box-shadow-value);
-    background-color:whitesmoke;
-
-}
-.form{
-    display:flex;
+    height:100%;width:100%;
+    background-color:#e3c0bc;
+    background-image:url(bigimg.jpg);
+    background-size:contain;
+    background-position:center;
+    background-repeat:no-repeat;
+    opacity:.8;display:flex;
+    flex-shrink:1;
+    font-family:Roboto,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
     flex-direction:column;
     align-content:center;
-    align-self: center;
-    justify-self: flex-end;
-    width:50%;
-    margin:auto;
-    border:1px solid gray;
-    border-radius:3px;
-    align-items:center;
-    background-color:whitesmoke;
-
+    justify-content:center;
+    z-index:1
 }
-/* .form h2{
-    font-size:3rem;
-    font-family:Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif';
-} */
-.box{
-    padding:12px;
-    width:65%;
-    margin:15px;
-    border:1px solid black;
-    border-radius:3px;
-    outline: none;
-    box-shadow:var(--box-shadow-value)
-  
+img{
+    position:absolute
+    ;z-index:1;
+    left:75%;
+    width:50;
+    height:50%;
+    flex-shrink:3
 }
-.form{
-    box-shadow: var(--box-shadow-value2);
+header{
+    padding-bottom:5%;
+    background-color:#e3c0bc43
 }
-.signup{
-    color:darkgray;
-    visibility: hidden;
-    flex-wrap: wrap-reverse;
+h1,h2{
+    padding-bottom:10px;
+    display:flex;
+    justify-content:center;
+    z-index:2
+}#blurb{
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    margin:1%;
+    width:25vw;
+    border:1px solid #000;
+    box-shadow:var(--box-shadow-value);
+    border-radius:3%;
+    justify-items:center;
+    flex-shrink:3;
+    width:fit-content
+}form{
+    width:30%;
+    flex-direction:column;
+    height:40%;
+    flex-shrink:3;
+    align-items:flex-start;
+    color:#000;
+    z-index:1
+}
+h3{
+    padding-left:60%;
+    color:purple
+}
+.signin{
+    min-height:fit-content;
+    min-width:fit-content;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-around;
+    align-self:center;
+    align-items:center
+    ;border:1px solid purple;
+    background-image:url(divbg.jpeg);
+    background-size:cover;
+    color:#000;
+    height:30vh;
+    min-width:30vw;
+    flex-basis:auto;
+    flex-shrink:1;
+    flex-direction:column;
+    align-self:center;
+    justify-self:end;
+    box-shadow:var(--box-shadow-value);
+    border-radius:3%;
+    z-index:2
+}
+.submit{
+    width:30%;
+    min-width:fit-content
+}
+span{
+    color:purple;
 }
